
V8.xx (xx.xx.2023)
 -new "cell2"-variation by Brad Stefanov (was already included in 8.00 but did not make it into the release notes)
 -fixed a bug in the math library which causes some variations to fail which used trigonometric functions with large
  arguments (e.g. "phoenix_julia")
 -added a check for path-settings which contain space-characters and display a warning in this case
 -added a context-menu to the resources-dialog for editing text (copy, cut, paste)
 -removed the parameters "X" and "Y" of "circleLinear" which were never used

V8.00 (19.02.2023)
 - huge improvements in solid rendering, hence the big change in version number:
    -now it feels like it should have from the start, i.e. it's fun to use
    -needs less render time (about 66%)
    -quicker response in the preview-render
    -more accurate calculation of normal vectors
    -more accurate lighting calculation
    -needs less spatial oversampling in order to get clear details in many cases
    -there are three other sizes of shadow maps available
    -fixed an old bug which caused the shadow direction differing from the light direction
    -much faster tone-mapping (the final phase of rendering)
    -use reduced shadow-map size when rendering (smaller) previews to save memory
    -new "pre_affine3D"- and "post_affine3D"-variations for more precise control over affine transforms in 3D space
    -all solid-random-flame-generators now support many more base-shapes
 - new "Solid (recursive)"-random-flame-generator to generate simple but nice solid flames (thanks Brad for the name suggestion)
 - fixed a bug which prevented entering of values into number-fields manually in some cases
 - increased the default value of tinaRealtimePreviewIdleAmount (which causes less idling and smoother realtime-preview))
 - changed the locale of number-fields to US, so that the decimal separator is always a dot (".")
 - added "hourglass3D"-variation as suggested at the Facebook-group