@@ -50,6 +50,8 @@ public class Prefs extends ManagedObject {
   static final String KEY_GENERAL_SPECIAL_MAC_OS_FILE_HANDLING = "general.special_mac_os_file_handling.1";
   static final String KEY_GENERAL_MAC_OS_SEC_BOOKMARKS = "general.mac_os_sec_bookmarks";
   static final String KEY_GENERAL_SHOW_TIPS_AT_STARTUP = "general.show_tips_at_startup";
+
+  static final String KEY_GENERAL_SKIP_PATH_CHECK_AT_STARTUP = "general.skip_path_check_at_startup";
   static final String KEY_GENERAL_LAST_TIP = "general.last_tip";
 
   static final String KEY_GENERAL_DEVELOPMENT_MODE = "general.development_mode";
@@ -223,6 +225,9 @@ public class Prefs extends ManagedObject {
 
   @Property(description = "Show tips at startup", category = PropertyCategory.GENERAL)
   private boolean showTipsAtStartup = true;
+
+  @Property(description = "Skip the check for path validity at program startup. Not recommended, only for backwards compatiblity", category = PropertyCategory.GENERAL)
+  private boolean skipPathCheckAtStartup = false;
 
   @Property(
       description =
@@ -896,6 +901,7 @@ public class Prefs extends ManagedObject {
     tinaEditorProgressivePreviewMaxRenderQuality = pSrc.tinaEditorProgressivePreviewMaxRenderQuality;
     tinaFontScale = pSrc.tinaFontScale;
     showTipsAtStartup = pSrc.showTipsAtStartup;
+    skipPathCheckAtStartup = pSrc.skipPathCheckAtStartup;
     specialMacOsFileHandling = pSrc.specialMacOsFileHandling;
     macOsUseSecurityScopedBookmarks = pSrc.macOsUseSecurityScopedBookmarks;
     lastTip = pSrc.lastTip;
@@ -1705,6 +1711,14 @@ public class Prefs extends ManagedObject {
 
   public void setShowTipsAtStartup(boolean showTipsAtStartup) {
     this.showTipsAtStartup = showTipsAtStartup;
+  }
+
+  public boolean isSkipPathCheckAtStartup() {
+    return skipPathCheckAtStartup;
+  }
+
+  public void setSkipPathCheckAtStartup(boolean skipPathCheckAtStartup) {
+    this.skipPathCheckAtStartup = skipPathCheckAtStartup;
   }
 
   public boolean isSpecialMacOsFileHandling() {
