@@ -4,8 +4,10 @@ V8.xx (xx.xx.2023)
  -fixed a bug in the math library which causes some variations to fail which used trigonometric functions with large
   arguments (e.g. "phoenix_julia")
  -added a check for path-settings which contain space-characters and display a warning in this case
+  - this check can be skipped by enabling the property "skipPathCheckAtStartup" in the Preferences
  -added a context-menu to the resources-dialog for editing text (copy, cut, paste)
  -removed the parameters "X" and "Y" of "circleLinear" which were never used
+ -removed the parameter "scale_t" of "heart_wf" which was never used
 
 V8.00 (19.02.2023)
  - huge improvements in solid rendering, hence the big change in version number:
